--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dominik Holešovský - Certifikovaný Osobní Trenér | Monstergym Brno</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- SEO -->
     <meta name="description" content="Certifikovaný osobní trenér Dominik Holešovský v Brně-Slatině. Diagnostika pohybového aparátu, zdravý pohyb, zvýšení síly. Více než 4 roky zkušeností a desítky spokojených klientů." />
     <meta name="author" content="Dominik Holešovský" />
     <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb" />
 
+    <!-- Open Graph -->
     <meta property="og:title" content="Dominik Holešovský - Certifikovaný Osobní Trenér" />
     <meta property="og:description" content="Profesionální osobní tréninky v Brně-Slatině. Diagnostika, zdravý pohyb a efektivní nárůst síly." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
   </head>
 
   <body>
