--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- SEO -->
-    <meta name="description" content="Certifikovaný osobní trenér Dominik Holešovský v Brně-Slatině. Diagnostika pohybového aparátu, zdravý pohyb, zvýšení síly. Více než 4 roky zkušeností a desítky spokojených klientů." />
+    <meta name="description" content="Dominik Holešovský – certifikovaný osobní trenér v Brně. Nabízím osobní tréninky, online programy a výživové poradenství pro zvýšení síly a zdravý pohyb." />
     <meta name="author" content="Dominik Holešovský" />
     <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb" />
 
@@ -24,9 +24,15 @@
     <meta property="og:description" content="Profesionální osobní tréninky v Brně-Slatině. Diagnostika, zdravý pohyb a efektivní nárůst síly." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://www.dominikholesovsky.cz/" />
   </head>
 
   <body>
+    <!-- Statický H1 pro SEO crawlery (neviditelné) -->
+    <h1 style="position:absolute; left:-9999px; top:-9999px;">
+      Dominik Holešovský – Certifikovaný osobní trenér Brno
+    </h1>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
