--- a/index.html
+++ b/index.html
@@ -3,34 +3,115 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dominik Holešovský - Certifikovaný Osobní Trenér | Monstergym Brno</title>
 
-    <!-- Favicon -->
+    <title>Dominik Holešovský – Certifikovaný osobní trenér | Monstergym Brno</title>
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.dominikholesovsky.cz/" />
+
+    <!-- Favicony -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- SEO -->
-    <meta name="description" content="Dominik Holešovský – certifikovaný osobní trenér v Brně. Nabízím osobní tréninky, online programy a výživové poradenství pro zvýšení síly a zdravý pohyb." />
+    <meta
+      name="description"
+      content="Dominik Holešovský – certifikovaný osobní trenér v Brně. Nabízím osobní tréninky, online programy a výživové poradenství pro zvýšení síly, zdravý pohyb a lepší kondici."
+    />
     <meta name="author" content="Dominik Holešovský" />
-    <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb" />
+    <meta
+      name="keywords"
+      content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb, kondice, zdraví"
+    />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Dominik Holešovský - Certifikovaný Osobní Trenér" />
-    <meta property="og:description" content="Profesionální osobní tréninky v Brně-Slatině. Diagnostika, zdravý pohyb a efektivní nárůst síly." />
+    <meta property="og:title" content="Dominik Holešovský – Osobní trenér Brno" />
+    <meta
+      property="og:description"
+      content="Profesionální osobní tréninky v Brně-Slatině. Diagnostika, zdravý pohyb a efektivní nárůst síly."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:url" content="https://www.dominikholesovsky.cz/" />
+    <meta property="og:locale" content="cs_CZ" />
+
+    <!-- Structured Data JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "SportsActivityLocation",
+            "@id": "https://www.dominikholesovsky.cz/#business",
+            "name": "Dominik Holešovský – Osobní trenér",
+            "url": "https://www.dominikholesovsky.cz/",
+            "telephone": "+420 725 961 371",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Slatina",
+              "addressLocality": "Brno",
+              "addressRegion": "Jihomoravský kraj",
+              "postalCode": "62700",
+              "addressCountry": "CZ"
+            },
+            "sameAs": [
+              "https://www.instagram.com/dominik.holesovsky"
+            ]
+          },
+          {
+            "@type": "FAQPage",
+            "@id": "https://www.dominikholesovsky.cz/#faq",
+            "mainEntity": [
+              {
+                "@type": "Question",
+                "name": "Jak probíhá osobní trénink?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Osobní trénink probíhá individuálně, přizpůsobený vašim cílům a fyzickým možnostem. Diagnostika pohybového aparátu je součástí."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Nabízíte online tréninky?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Ano, nabízím online tréninky s přesným plánem a videonávody, které lze provádět doma nebo ve fitku."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Jak mohu objednat konzultaci?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Kontaktovat mě můžete přes kontaktní formulář na webu nebo telefonicky. Domluvíme termín a rozsah služeb."
+                }
+              }
+            ]
+          }
+        ]
+      }
+    </script>
+
+    <!-- Performance -->
+    <link rel="preload" href="/og-image.png" as="image" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
 
   <body>
-    <!-- Statický H1 pro SEO crawlery (neviditelné) -->
-    <h1 style="position:absolute; left:-9999px; top:-9999px;">
-      Dominik Holešovský – Certifikovaný osobní trenér Brno
+    <!-- Skrytý H1 pro SEO -->
+    <h1 style="position: absolute; left: -9999px; top: -9999px;">
+      Dominik Holešovský – Certifikovaný osobní trenér Brno | Monstergym Slatina
     </h1>
 
     <div id="root"></div>
