--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
   <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb, kondice, zdraví" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Dominik Holešovský – Osobní trenér Brno" />
-  <meta property="og:description" content="Profesionální osobní tréninky v Brně-Slatině. Diagnostika, zdravý pohyb a efektivní nárůst síly." />
+  <meta property="og:title" content="Dominik Holešovský – Osobní trenér Brno Slatina | Fitness, zdravý pohyb, síla" />
+  <meta property="og:description" content="Profesionální osobní tréninky v Brně-Slatině. Zlepšete kondici, sílu a zdravý pohyb. Rezervujte svůj trénink ještě dnes!" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image:alt" content="Dominik Holešovský – osobní trenér Brno, Monstergym Slatina" />
   <meta property="og:url" content="https://www.dominikholesovsky.cz/" />
   <meta property="og:locale" content="cs_CZ" />
 
@@ -57,6 +58,12 @@
         "sameAs": [
           "https://www.instagram.com/dominik.holesovsky"
         ]
+      },
+      {
+        "@type": "Person",
+        "name": "Dominik Holešovský",
+        "url": "https://www.dominikholesovsky.cz/",
+        "sameAs": ["https://www.instagram.com/dominik.holesovsky"]
       },
       {
         "@type": "FAQPage",
