--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dominik Holešovský – Certifikovaný osobní trenér | Monstergym Brno</title>
+  
+  <!-- Title & Meta -->
+  <title>Dominik Holešovský – Osobní trenér Brno Slatina | Fitness, zdravý pohyb, síla</title>
+  <meta name="description" content="Osobní a online tréninky v Brně-Slatině. Zlepšete kondici, sílu a zdravý pohyb. Rezervujte svůj trénink ještě dnes!" />
+  <meta name="author" content="Dominik Holešovský" />
+  <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb, kondice, zdraví" />
+  <meta name="robots" content="index, follow" />
 
   <!-- Canonical -->
   <link rel="canonical" href="https://www.dominikholesovsky.cz/" />
@@ -14,18 +20,11 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="theme-color" content="#000000" />
 
-  <!-- Fonts -->
+  <!-- Fonts preconnect & preload -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- SEO -->
-  <meta name="description" content="Dominik Holešovský – certifikovaný osobní trenér v Brně. Nabízím osobní tréninky, online programy a výživové poradenství pro zvýšení síly, zdravý pohyb a lepší kondici." />
-  <meta name="author" content="Dominik Holešovský" />
-  <meta name="keywords" content="osobní trenér, Brno, Slatina, Monstergym, fitness, trénink, diagnostika, síla, zdravý pohyb, kondice, zdraví" />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" />
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Dominik Holešovský – Osobní trenér Brno Slatina | Fitness, zdravý pohyb, síla" />
@@ -33,6 +32,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/og-image.png" />
   <meta property="og:image:alt" content="Dominik Holešovský – osobní trenér Brno, Monstergym Slatina" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:url" content="https://www.dominikholesovsky.cz/" />
   <meta property="og:locale" content="cs_CZ" />
 
@@ -99,11 +100,8 @@
   }
   </script>
 
-  <!-- Performance -->
+  <!-- Preload image -->
   <link rel="preload" href="/og-image.png" as="image" />
-
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
 </head>
 
 
