--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html lang="cs">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -99,9 +100,6 @@
     ]
   }
   </script>
-
-  <!-- Preload image -->
-  <link rel="preload" href="/og-image.png" as="image" />
 </head>
 
 
